# smart_reader

./: .env.example  .gitignore  docker-compose.yml
backend/: main.py  pyproject.toml
backend/services/: .local_api.py  AI_api.py  cloud_api.py  config.py  databse.py  local_api.py  user.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/components/: Login.vue  Reader.vue  Registration.vue
